--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
@@ -20,12 +21,15 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.3",
     "google-libphonenumber": "^3.2.34",
+    "leaflet": "^1.9.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-international-phone": "^4.2.4",
+    "react-leaflet": "^4.2.1",
     "react-photo-view": "^1.2.4",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
